Updated notebook to render image correctly.

--- a/NYC Schools SAT Data Analysis.ipynb
+++ b/NYC Schools SAT Data Analysis.ipynb
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](selective_nyc_schools.png \"Title\")"
+    "<img src=\"images/selective_nyc_schools.png\" width=\"800\" />\n"
    ]
   },
   {
