Updated notebook to render image correctly.

--- a/NYC Schools SAT Data Analysis.ipynb
+++ b/NYC Schools SAT Data Analysis.ipynb
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/selective_nyc_schools.png\">"
+    "<img src=\"selective_nyc_schools.png\">"
    ]
   },
   {
