Attempt #2 at resizing tiger image

--- a/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
+++ b/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "To illustrate: Gerald, a Palaeolithic caveperson, has met a sample of wild tigers that have all tried to have him for dinner.  Gerald makes an inference about the population of wild tigers and concludes that he should probably steer clear of wild tigers in the future.  \n",
     "\n",
-    "<img src=\"imgonline-com-ua-FrameBlurred-HOVElqNSEhYnC7L.jpg\" style=\"width:200px;height:150px\"/>\n",
+    "<div style=\"width: 300px;\">\n",
+    "<img src=\"imgonline-com-ua-FrameBlurred-HOVElqNSEhYnC7L.jpg\" style=\"width:400px;height:300px\"/>\n",
+    "</div>\n",
     "\n",
     "Go find another snack, buddy!\n",
     "\n",
