Added link to accompanying blog post

--- a/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
+++ b/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# The Ancient Art of Descriptive Data Analysis\n",
     "\n",
-    "### Andrew Hetherington, 2nd May 2020"
+    "### Andrew Hetherington, 3rd May 2020\n",
+    "\n",
+    "This notebook accompanies a [blog post on Medium](https://medium.com/@andrew.m.hetherington/the-ancient-art-of-descriptive-data-analysis-769a5fcc7ebc)."
    ]
   },
   {
