Updated some grammar

--- a/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
+++ b/Blog - Descriptive Data Analysis/Descriptive Data Analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "You've probably heard at some point that humans are incredibly good at detecting patterns in the environment.  And that's true - for thousands of years, our brains have been making inferences and predictions based on observed data.  \n",
     "\n",
-    "To illustrate: Gerald, a Palaeolithic caveperson, has met a sample of wild tigers that have all tried to have him for dinner.  Gerald makes an inference about the population of wild tigers and concludes that he should probably steer clear of wild tigers in the future.  \n",
+    "To illustrate: Gerald, a Palaeolithic caveperson, has met a sample of wild tigers that have all tried to have him for dinner.  Gerald makes an inference about the population of wild tigers and concludes that he should probably steer clear of them in the future.  \n",
     "\n",
     "<img src=\"imgonline-com-ua-FrameBlurred-HOVElqNSEhYnC7L.jpg\" style=\"width:400px;height:300px\"/>\n",
     "\n",
