Added blog link to notebook introduction
For real this time

--- a/Blog—Emerging market segments with k-means/Blog—Detecting emerging market segments with k-means.ipynb
+++ b/Blog—Emerging market segments with k-means/Blog—Detecting emerging market segments with k-means.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Identifying emerging market segments with k-means\n",
     "\n",
+    "### Andrew Hetherington, 3rd May 2020¶\n",
+    "\n",
+    "This notebook accompanies a [blog post on Medium](https://medium.com/@andrew.m.hetherington/identifying-emerging-market-segments-with-k-means-bf221147528f).\n",
+    "\n",
     "EY’s [Future Consumer Index](https://www.ey.com/en_gl/consumer-products-retail/how-covid-19-could-change-consumer-behavior) is a short, 8-minute read that pulls together the results of a survey of 4,859 consumers across the US, Canada, UK, France and Germany during the week of 6 April 2020.  Using some rather snazzy data visualisation techniques, EY proposes the emergence of five distinct types of consumer in the aftermath of the Covid-19 pandemic, each with differing behaviours and sentiment in regard to their purchasing decisions.  Some of these types are pessimistic—cutting deep their expenditures—while some are greatly optimistic, jumping at the opportunity to spend more as restrictions are gradually lifted.\n",
     "\n",
     "It’s not clear exactly how EY defines these five types (“get to normal”, “cautiously extravagant”, “stay frugal”, “keep cutting”, and “back with a bang”) beyond general qualitative descriptions.  However, it did get me thinking.  Two of the key variables EY have considered are optimism and income.  Clearly, optimism relates to how willing a consumer is to spend and income relates to how able they are to do so—and both will feed into an individual’s purchasing decisions.  Suppose that we had access to quantitative data on consumers’ relative levels of optimism and income.  How could we divide consumers up into groups, based on these data, in a rigorous and reproducible way?  \n",
