--- a/Blog—Emerging market segments with k-means/Blog—Detecting emerging market segments with k-means.ipynb
+++ b/Blog—Emerging market segments with k-means/Blog—Detecting emerging market segments with k-means.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Identifying emerging market segments with k-means\n",
     "\n",
-    "### Andrew Hetherington, 3rd May 2020¶\n",
+    "### Andrew Hetherington, 14th June 2020¶\n",
     "\n",
     "This notebook accompanies a [blog post on Medium](https://medium.com/@andrew.m.hetherington/identifying-emerging-market-segments-with-k-means-bf221147528f).\n",
     "\n",
