Small tweaks to blog notebook
Small changes to text, removed unnecessary pandas import

--- a/Blog—Evaluating Classifier Model Performance/Evaluating Classifier Model Performance.ipynb
+++ b/Blog—Evaluating Classifier Model Performance/Evaluating Classifier Model Performance.ipynb
@@ -49,17 +49,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below, we use Scikit-Learn to download our data and to build our classifier.  First, import relevant modules:"
+    "Below, we use Scikit-Learn to download our data and to build our classifier.  First, import Matplotlib for plotting:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import modules for maths, data manipulation and plotting\n",
-    "import pandas as pd\n",
+    "# Import modules for maths and plotting\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.style as style\n",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +182,7 @@
        "array([False, False, False, False, False, False,  True, False, False])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +282,7 @@
        "       [  72,  579]], dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +573,7 @@
     "\n",
     "(You may think it's possible to have an even worse classifier than this—perhaps a classifier that gets every digit wrong by predicting the opposite every time.  But in that case, then the classifier would essentially be a perfect classifier—to be *so wrong,* the model would have needed to learn the classification perfectly and then just switch around the outputs before making a prediction!)\n",
     "\n",
-    "The *best possible classifier* will be able to correctly predict every given instance as positive or negative with 100% accuracy.  The decision scores for all positive instances will be some high value, to represent the fact that the model is supremely confident in its predictions, and equally so for every digit it has been given.  All negative instances will have some low decision score, since the model is, again, supremely and equally confident that all these instances are negative.  If we start the decision threshold at a very high value so that all instances are classified as negative, we have the same situation as described for the 50/50 classifier—both true and false positive rates are zero because we have not predicted any positive instances.  In the same way, when the decision threshold is very low, we will predict all instances to be positive and so will have a value of one for both true and false positive rates.  Hence, the ROC curve will start at (0,0) and end at (1,1), as for the 50/50 classifier.  *However,* when the decision threshold is set at any level between the high and low decision scores that identify positive and negative instances, the classifier will operate perfectly with a 100% true positive rate and a 0% false positive rate.  Amazing!  The consequences of the above is that the ROC curve for our perfect classifier is the curve that joins up (0,0), (0,1) and (1,1)—a curve that hugs the upper left-hand corner of the plot.\n",
+    "The *best possible classifier* will be able to correctly predict every given instance as positive or negative with 100% accuracy.  The decision scores for all positive instances will be some high value, to represent the fact that the model is supremely confident in its predictions, and equally so for every digit it has been given.  All negative instances will have some low decision score, since the model is, again, supremely and equally confident that all these instances are negative.  If we start the decision threshold at a very high value so that all instances are classified as negative, we have the same situation as described for the 50/50 classifier—both true and false positive rates are zero because we have not predicted any positive instances.  In the same way, when the decision threshold is very low, we will predict all instances to be positive and so will have a value of one for both true and false positive rates.  Hence, the ROC curve will start at (0,0) and end at (1,1), as for the 50/50 classifier.  *However,* when the decision threshold is set at any level between the high and low decision scores that identify positive and negative instances, the classifier will operate perfectly with a 100% true positive rate and a 0% false positive rate.  Amazing!  The consequences of the above is that the ROC curve for our perfect classifier is *the curve that joins up (0,0), (0,1) and (1,1)—a curve that hugs the upper left-hand corner of the plot.*\n",
     "\n",
     "Most real-world classifiers will be somewhere between these two extremes.  Ideally, we will want our classifier's ROC curve to be closer to looking like a perfect classifier than one that guesses randomly—so *a ROC curve that lies closer to the upper left-hand corner of the plot (closer to the behaviour of a perfect classifier) represents a superior model.*\n",
     "\n",
@@ -583,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
