--- a/Blog—Evaluating Classifier Model Performance/Evaluating Classifier Model Performance.ipynb
+++ b/Blog—Evaluating Classifier Model Performance/Evaluating Classifier Model Performance.ipynb
@@ -563,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another common way of assessing (and visualising) model performance is by using the ROC curve.  Historically, it has its origins in signal detection theory and was first used in the context of detecting enemy aircraft in World War II, where the ability of a radar receiver operator to detect and make decisions based on incoming signals was referred to as Receiver Operating Characteristic.  Although the precision context in which it is generally used today has changed, the name has stuck.\n",
+    "Another common way of assessing (and visualising) model performance is by using the ROC curve.  Historically, it has its origins in signal detection theory and was first used in the context of detecting enemy aircraft in World War II, where the ability of a radar receiver operator to detect and make decisions based on incoming signals was referred to as Receiver Operating Characteristic.  Although the precise context in which it is generally used today has changed, the name has stuck.\n",
     "\n",
     "The ROC curve plots how the *True Positive rate* and the *False Positive rate* change as the model threshold is varied.  The true positive rate is simply the percentage of positive instances that were correctly identified (ie the number of 7s we correctly predicted).  The false positive rate is, correspondingly, the number of negative instances that were incorrectly identified as being positive (ie the number of not-7s that were incorrectly predicted to be 7s).  You may have noticed that the definition for the true positive rate is equivalent to that of recall.  And you'd be correct—these are simply different names for the same metric.\n",
     "\n",
