Updated notebook again to adjust more formatting

--- a/Blog—Maximum Likelihood Estimation in R/Maximum Likelihood Estimation in R.ipynb
+++ b/Blog—Maximum Likelihood Estimation in R/Maximum Likelihood Estimation in R.ipynb
@@ -317,7 +317,7 @@
     }
    ],
    "source": [
-    "min <- nlm(negative_likelihood,0.5,stepmax=0.5)\n",
+    "nlm(negative_likelihood,0.5,stepmax=0.5)\n",
     "\n",
     "# $minimum\n",
     "# -0.07965256\n",
