--- a/Blog—Maximum Likelihood Estimation in R/Maximum Likelihood Estimation in R.ipynb
+++ b/Blog—Maximum Likelihood Estimation in R/Maximum Likelihood Estimation in R.ipynb
@@ -65,7 +65,9 @@
     "# Generate an outcome, ie number of heads obtained, assuming a fair coin was used for the 100 flips\n",
     "heads <- rbinom(1,100,0.5)\n",
     "\n",
-    "heads"
+    "heads\n",
+    "\n",
+    "# 52"
    ]
   },
   {
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
