--- a/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
+++ b/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 10 pairs of x and y coordinates.  What quantities the coordinates actually represent isn't particularly important for that sake of this discussion.  You can make your own if you want.  x could be number of scoops of ice cream in a given sundae and y could be the number of seconds it took me to eat the entire thing.  Yum\n",
+    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 10 pairs of x and y coordinates.  What quantities the coordinates actually represent isn't particularly important for that sake of this discussion.  You can make your own if you want.  x could be number of scoops of ice cream in a given sundae and y could be the number of seconds it took me to eat the entire thing.  Yum.\n",
     "\n",
     "Because the human brain is rubbish at gleaning information from even this pathetically small dataset, let's plot out each of the four datasets and compare them."
    ]
