Fixed more typos

--- a/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
+++ b/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
@@ -232,14 +232,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 10 pairs of x and y coordinates.  What quantities the coordinates actually represent isn't particularly important for that sake of this discussion.  You can make your own if you want.  x could be number of scoops of ice cream in a given sundae and y could be the number of seconds it took me to eat the entire thing.  Yum.\n",
+    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 10 pairs of x and y coordinates.  \n",
+    "\n",
+    "*(What quantities the coordinates actually represent isn't particularly important for that sake of this discussion.  You can make your own if you want.  x could be number of scoops of ice cream in a given sundae and y could be the number of seconds it took me to eat the entire thing.  Yum.)*\n",
     "\n",
     "Because the human brain is rubbish at gleaning information from even this pathetically small dataset, let's plot out each of the four datasets and compare them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +374,9 @@
     "            ax.text(x=10, y=4, s='y = {0:.2f}x + {1:.2f}'.format(z[0],z[1]), fontsize=20, alpha=0.75)\n",
     "\n",
     "# Create plots without trendline\n",
-    "plot_data()"
+    "plot_data()\n",
+    "\n",
+    "plt.savefig(\"anscombe_plotted\")"
    ]
   },
   {
@@ -403,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +423,9 @@
    ],
    "source": [
     "# Same code as before, but this time let's add the trendlines\n",
-    "plot_data(trendlines=True)"
+    "plot_data(trendlines=True)\n",
+    "\n",
+    "plt.savefig(\"anscombe_plotted_trendlines\")"
    ]
   },
   {
@@ -462,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we're really in trouble... the correlation coefficients are all basically the same too!  Is there any way we can distinguish these datasets from their summary statistics???"
+    "Now we're really in trouble... the correlation coefficients are all basically the same too!  Is there any way we can distinguish these datasets from their summary statistics?"
    ]
   },
   {
