Updated notebook subtitle

--- a/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
+++ b/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Anscombe's Quartet, aka The Troll Dataset\n",
     "\n",
-    "## Why You Should Always Plot Your Data\n",
+    "## Why You Should Always Plot Your Data Before Jumping to Conclusions\n",
     "\n",
     "Have you ever wondered what statisticians do for fun?  You might think that they might enjoy going to casinos and ruining people's nights by lecturing them about how they're betting against the odds.  Or perhaps you think they spend an entire day flipping a coin to hypothesis test whether it's fair or biased.\n",
     "\n",
