Reworded some text to read better

--- a/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
+++ b/Blog—Anscombe's Quartet/Anscombe's Quartet.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Why You Should Always Plot Your Data Before Jumping to Conclusions\n",
     "\n",
-    "Have you ever wondered what statisticians do for fun?  You might think that they might enjoy going to casinos and ruining people's nights by lecturing them about how they're betting against the odds.  Or perhaps you think they spend an entire day flipping a coin to hypothesis test whether it's fair or biased.\n",
+    "Have you ever wondered what statisticians do for fun?  You might think that they would enjoy going to casinos and ruining people's nights by lecturing them about how they're betting against the odds.  Or perhaps you can picture one spending an entire day flipping a coin to hypothesis test whether it's fair or biased.\n",
     "\n",
-    "But you'd be wrong.  In reality, when a statistician is looking for a bit of mild amusement, they spend time finding creative ways to troll people.  Check out a prime example below."
+    "But you'd be wrong.  In reality, when a statistician is looking for a bit of mild amusement, they spend time *finding creative ways to troll people.*  Check out a prime example below."
    ]
   },
   {
@@ -232,11 +232,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 10 pairs of x and y coordinates.  \n",
+    "This is a dataset created by statistician Francis Anscome in 1973.  What we have here is four datasets (labelled I, II, III and IV because Roman numerals are cool) each consisting of 11 pairs of x and y coordinates.  \n",
     "\n",
     "*(What quantities the coordinates actually represent isn't particularly important for that sake of this discussion.  You can make your own if you want.  x could be number of scoops of ice cream in a given sundae and y could be the number of seconds it took me to eat the entire thing.  Yum.)*\n",
     "\n",
-    "Because the human brain is rubbish at gleaning information from even this pathetically small dataset, let's plot out each of the four datasets and compare them."
+    "Because the human brain is rubbish at gleaning information from tabular data—even for this pathetically small dataset—let's plot out each of the four datasets and compare them."
    ]
   },
   {
@@ -519,7 +519,7 @@
    "source": [
     "What a nightmare!  The majority of the simple, straightforward summary statistics that you might want to use to describe each of these datasets are the same for all four—*despite us having seen that the shape and pattern of the data are wildly different.*\n",
     "\n",
-    "You might wonder what manner of terrible thing could have happened if we didn't bother plotting out our data beforehand.  We may well have seen the identical summary statistics and assumed that all four datasets had the same distribution.  Our conclusion and subsequent actions would have been way off the mark.\n",
+    "You might wonder what manner of terrible thing could have happened if we didn't bother plotting out our data beforehand.  We may well have seen the identical summary statistics and assumed that all four datasets had the same distribution.  Our conclusion — and any actions taken as a result—would have been way off the mark.\n",
     "\n",
     "So consider this a cautionary tale—while summary statistics are certainly useful and can provide us with more precise information than we can gather from just eyeing up a graph, their simplistic nature can also deceive.  *In your exploratory data analysis, never skip over visualising your data:* plotting, re-plotting, and plotting again in different ways to try and expose new patterns.  \n",
     "\n",
